[package]
name = "towebp"
version = "0.2.1"
description = "Convert images to webp"
authors = ["Genevive <gen@nyble.dev>"]
repository = "https://github.com/gennyble/towebp"
readme = "README.md"
keywords = ["cli", "image", "webp"]
categories = ["graphics", "command-line-utilities"]
license = "CC0-1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
image = "0.23"
webp = "0.2"